--- a/service_provider.yml
+++ b/service_provider.yml
@@ -1,12 +1,82 @@
+# #         
+# CONFIGS
+#
+config:
+  from_address: noreply@domain.com
+          
+# #
+# GATEWAYS
+#
+# HUMAN (human.com.br)
 # Configuracao para envio de mensagens SMS, de acordo com 
 # especificacoes no Manual de Integracao ao Human Gateway
-dispatch: send
-type: E
-callbackOption: 1 
-base_url: system.human.com.br
-port: 8080
-path: /GatewayIntegration/msgSms.do
-account: xxxxxx
-password: xxxxxxxxx
-from: FULANO DE TAL S/A
+human:
+  dispatch: send
+  type: E
+  callbackOption: 1 
+  base_url: system.human.com.br
+  port: 8080
+  path: /GatewayIntegration/msgSms.do
+  account: xxxxxx
+  password: xxxxxxxxx
+  from: FULANO DE TAL S/A
 
+# #
+# EMAIL 2 SMS CARRIERS
+#
+carriers: 
+   # #  
+   # Brasil 
+   claro: @clarotorpedo.com.br 
+   tim: @tim.com.br
+   oi: @sms.oi.com.br
+   vivo: @vivomail.com.br
+ 
+   # US Carriers
+   alltell: @message.alltell.com
+   ameritech: @paging.acswireless.com  
+   at&t: @txt.att.net
+   bellsouthmobility: @blsdcs.net
+   blueskyfrog: @blueskyfrog.com
+   boost: @myboostmobile.com
+   cellularsouth: @csouth1.com
+   kajeet: @mobile.kajeet.net
+   metropcs: @mymetropcs.com
+   powertel: @ptel.net
+   pscwireless: @sms.pscel.com
+   qwest: @qwestmp.com
+   southernlink: @page.southernlinc.com
+   sprint: @messaging.sprintpcs.com
+   suncom: @tms.suncom.com
+   t-mobile: @tmomail.net
+   virgin: @vmobl.net
+   verizon: @vtext.com
+   # International Carriers
+   e-plus-germany: @smsmail.eplus.de
+   fido-canada: @fido.ca
+   o2-germany: @o2online.de
+   o2-uk: @mmail.co.uk
+   orange-netherlands: @sms.orange.nl
+   orange-uk: @orange.net
+   t-mobile-austria: @sms.t-mobile.at
+   t-mobile-germany: @t-d1-sms.de
+   t-mobile-uk: @t-mobile.uk.net
+   telefonica-spain: @movistar.net
+   vodafone-germany: @vodafone-sms.de
+   vodafone-uk: @sms.vodafone.net
+   vodafone-italy: @sms.vodafone.it
+   vodafone-jp-chuugoku: @n.vodafone.ne.jp
+   vodafone-jp-hokkaido: @d.vodafone.ne.jp
+   vodafone-jp-hokuriko: @r.vodafone.ne.jp
+   vodafone-jp-kansai: @k.vodafone.ne.jp
+   vodafone-jp-osaka: @k.vodafone.ne.jp
+   vodafone-jp-kanto: @k.vodafone.ne.jp
+   vodafone-jp-koushin: @k.vodafone.ne.jp
+   vodafone-jp-tokyo: @k.vodafone.ne.jp
+   vodafone-jp-kyuushu: @q.vodafone.ne.jp
+   vodafone-jp-okinawa: @q.vodafone.ne.jp
+   vodafone-jp-shikoku: @s.vodafone.ne.jp
+   vodafone-jp-touhoku: @h.vodafone.ne.jp
+   vodafone-jp-niigata: @h.vodafone.ne.jp
+   vodafone-jp-toukai: @h.vodafone.ne.jp
+   vodafone-spain: @vodafone.es    
